# tmp

./: .gitignore  Cargo.toml  README.md
benchmarks/: .gitignore  Cargo.toml  ingestion_bench.sh  ingestion_results  materialize_results  pre_materialize_bench.sh  query_bench.sh  query_results
benchmarks/src/: lib.rs
hierarchical_aggregation_wheel/: Cargo.toml  README.md
hierarchical_aggregation_wheel/benches/: insert.rs  queries.rs  serde.rs
hierarchical_aggregation_wheel/examples/: serde.rs  sum_aggregator.rs
hierarchical_aggregation_wheel/fuzz/: Cargo.toml
hierarchical_aggregation_wheel/fuzz/fuzz_targets/: all_aggregator.rs  sum_aggregator.rs
hierarchical_aggregation_wheel/src/: lib.rs
hierarchical_aggregation_wheel/src/agg_wheel/: iter.rs  mod.rs
hierarchical_aggregation_wheel/src/aggregator/: mod.rs
hierarchical_aggregation_wheel/src/aggregator/impls/: mod.rs
hierarchical_aggregation_wheel/src/aggregator/impls/all/: mod.rs
hierarchical_aggregation_wheel/src/aggregator/impls/top_k/: entry.rs  map.rs  mod.rs  state.rs
wheeldb-rocks/: Cargo.toml
wheeldb-rocks/examples/: merge.rs
wheeldb-rocks/src/: db.rs  lib.rs  no_wheel_db.rs
