[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
duckdb = { version = "0.6.1", features = ["bundled"] }
wheeldb-rocks = { path = "../wheeldb-rocks" }
hierarchical_aggregation_wheel = { version = "0.1", path = "../hierarchical_aggregation_wheel", features = ["rkyv"] }
lz4_flex = "0.9.5"

tinystr = "0.7.1"
#tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
fastrand = "1.8.0"
clap = { version = "3.2", features = ["derive"] }
rand = { version = "0.8.0" }
zipf = "7.0.0"
hdrhistogram = "7"